[Fix] fixed the home class not showing

--- a/WebApp/Front/React/src/Home/Home.css
+++ b/WebApp/Front/React/src/Home/Home.css
@@ -3,6 +3,17 @@
 }
 
 .Home-header {
+    background-color: #FFFFFF;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: black;
+}
+
+.Home-head-bar {
     height: 10%;
     width: 100%;
     border-bottom-style: solid;
